# verve-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  bump.py  docker-entrypoint.sh  pyproject.toml  release.zsh  run.sh
.github/workflows/: lint.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 0b3973dab5df_fix_moving_duration.py  0b53ce351e8e_add_segment_sets.py  226de10ca77b_add_collections.py  3bd7d8987ff0_initial_structure.py  5e40e7670600_add_activity_tag_and_tag_categories_and_.py  98b8bfa023e7_add_climbing_activities.py  aae45b3b144e_add_index_on_token_hash.py  b7f4c2d9a8e1_add_rls_policy_to_password_reset_tokens.py  c3378badd2f4_add_records_settings_to_user_settings.py  d36a17d3a987_initial_setup.py  db3a6fcec306_add_indices_for_location_name_query.py  ee9fb2271c6d_add_activity_location_association.py  f30aeaa82971_add_new_column_to_users.py  f385499f76d8_add_energy_column_to_activity_and_make_.py  f46bdd18db9f_add_location_types.py  fe358beef644_add_password_reset_token.py
scripts/: add_dummy_data_to_track.py  create_user.py  init_db.py  offset_geojson_coords.py  verify_rls.py
tests/: conftest.py  test_activity.py  test_equipment.py  test_goals.py  test_highlights.py  test_locale.py  test_meta_data.py  test_rls.py  test_transformations.py  test_users.py  test_verve_file_meta_data.py
tests/resources/: MyWhoosh_1.fit  collection_stage_1_100_points.gpx  collection_stage_2_100_points.gpx  mont_ventoux.gpx  processed_Walk.json  processed_Weight_Training.json  running_three_segments.gpx  swimming_verve_file.json  two_segments_100_points.gpx
tests/routes/: test_activity.py  test_auth.py  test_base_routes.py  test_collection.py  test_equipment.py  test_goals.py  test_highlights.py  test_location.py  test_media.py  test_statistics.py  test_tag.py  test_track.py  test_users.py
verve_backend/: celery_app.py  crud.py  defaults.py  enums.py  exceptions.py  goal.py  main.py  models.py  result.py  tasks.py  transformations.py
verve_backend/api/: definitions.py  deps.py  main.py
verve_backend/api/common/: db_utils.py  locale.py  location.py  store_utils.py  track.py  utils.py
verve_backend/api/routes/: activity.py  admin.py  collection.py  equipment.py  goal.py  heatmap.py  highlights.py  location.py  login.py  media.py  resolver.py  statistics.py  tag.py  track.py  users.py
verve_backend/cli/: create_admin_user.py  ensure_rls.py  setup_db.py  verify_rls.py
verve_backend/core/: config.py  date_utils.py  db.py  logging_utils.py  meta_data.py  security.py  timing.py
verve_backend/highlights/: __init__.py  calculators.py  crud.py  registry.py  utils.py
verve_backend/locales/: de.json  en.json
verve_backend/queries/: activities_this_month.sql  activity_streak_weeks.sql  aggregate_activity_heatmap.sql  analyze_segments.sql  get_manual_activity_location_map.sql  grid_raw_data.sql  join_locations_to_tracks.sql  last_activity_date.sql  locations_by_activity_id.sql  match_location_to_tracks.sql  search_name_fuzzy.sql  select_collections.sql  select_track_data.sql  select_weekly_activity_data.sql  select_yearly_activity_data.sql  track_power_window.sql
verve_backend/schema/: __init__.py  exporter.py  importer.py  meta_data.py  verve_file.py
