
[project]
name = "verve-backend"
version = "1.16.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic==1.18.5",
  "bcrypt==4.3.0",
  "boto3==1.43.55",
  "boto3-stubs[s3]==1.43.55",
  "celery==5.6.3",
  "fastapi[standard]==0.139.2",
  "geo-track-analyzer==2.0.1",
  "geoalchemy2==0.20.0",
  "gevent==26.7.0",
  "psycopg==3.3.4",
  "pwdlib[argon2]>=0.3.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyjwt==2.13.0",
  "pyproj==3.7.2",
  "redis==7.4.1",
  "shapely==2.1.2",
  "sqlalchemy==2.0.51",
  "sqlmodel==0.0.39",
  "structlog==26.1.0",
]

[project.scripts]
setup-db = "verve_backend.cli.setup_db:main"
create-admin = "verve_backend.cli.create_admin_user:main"
ensure-rls = "verve_backend.cli.ensure_rls:main"
verify-rls = "verve_backend.cli.verify_rls:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "PD",
  "PT",
  "NPY",
  "N",
  "W",
  "RET",
  "ANN",
  "RUF",
  "SIM",
  "PERF",
]
unfixable = ["F841", "RUF015"]
ignore = [
  "ANN202",
  "ANN205",
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN401",
  "RET502",
  "RET503",
  "RET504",
  "RET505",
  "RUF005",
  "RUF009",
  "E731",
]

[dependency-groups]
dev = [
  "debugpy>=1.8.21",
  "matplotlib>=3.11.1",
  "pandas>=2.3.3",
  "plotly>=6.9.0",
  "rich>=15.0.0",
  "seaborn>=0.13.2",
  { include-group = "test" },
]
test = [
  "freezegun>=1.5.5",
  "pillow>=12.3.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-sugar>=1.1.1",
]
[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.31,<0.11.32"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "verve_backend"
module-root = ""

[tool.git-changelog]
output = "CHANGELOG.md"
convention = "conventional"
template = "angular"
